service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site-canary
  namespace: personal-site
spec:
  selector:
    app: personal-site
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
